--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="/Users/Edmond/Documents/workspace/Treatment/libs/cocos2d-android.jar"/>
+	<classpathentry kind="lib" path="libs/cocos2d-android.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
