--- a/assets/AnimTreatment1.plist
+++ b/assets/AnimTreatment1.plist
@@ -5,156 +5,178 @@
 	<key>frames</key>
 	<dict>
 		
-		<key>firsttreat1.png</key>
+		<key>arrow1.png</key>
 		<dict>
 			<key>aliases</key>
 			<array>
 			
 			</array>
 			<key>spriteColorRect</key>
-			<string>{{0, 0}, {766, 552}}</string>
+			<string>{{0, 0}, {247, 114}}</string>
 			<key>spriteOffset</key>
-			<string>{-17, -0}</string>
+			<string>{0, -0}</string>
 			<key>spriteSize</key>
-			<string>{766, 552}</string>
+			<string>{247, 114}</string>
 			<key>spriteSourceSize</key>
-			<string>{800, 552}</string>
+			<string>{247, 114}</string>
 			<key>spriteTrimmed</key>
 			<true/>
 			<key>textureRect</key>
-			<string>{{1, 0}, {766, 552}}</string>
+			<string>{{0, 0}, {247, 114}}</string>
 			<key>textureRotated</key>
 			<false/>
 		</dict>
 		
-		<key>firsttreat2.png</key>
+		<key>arrow2.png</key>
 		<dict>
 			<key>aliases</key>
 			<array>
 			
 			</array>
 			<key>spriteColorRect</key>
-			<string>{{0, 0}, {766, 552}}</string>
+			<string>{{0, 0}, {247, 114}}</string>
 			<key>spriteOffset</key>
-			<string>{-17, -0}</string>
+			<string>{0, -0}</string>
 			<key>spriteSize</key>
-			<string>{766, 552}</string>
+			<string>{247, 114}</string>
 			<key>spriteSourceSize</key>
-			<string>{800, 552}</string>
+			<string>{247, 114}</string>
 			<key>spriteTrimmed</key>
 			<true/>
 			<key>textureRect</key>
-			<string>{{768, 0}, {766, 552}}</string>
+			<string>{{249, 0}, {247, 114}}</string>
 			<key>textureRotated</key>
 			<false/>
 		</dict>
 		
-		<key>firsttreat3.png</key>
+		<key>arrow3.png</key>
 		<dict>
 			<key>aliases</key>
 			<array>
 			
 			</array>
 			<key>spriteColorRect</key>
-			<string>{{0, 0}, {766, 552}}</string>
+			<string>{{0, 0}, {247, 114}}</string>
 			<key>spriteOffset</key>
-			<string>{-17, -0}</string>
+			<string>{0, -0}</string>
 			<key>spriteSize</key>
-			<string>{766, 552}</string>
+			<string>{247, 114}</string>
 			<key>spriteSourceSize</key>
-			<string>{800, 552}</string>
+			<string>{247, 114}</string>
 			<key>spriteTrimmed</key>
 			<true/>
 			<key>textureRect</key>
-			<string>{{1536, 0}, {766, 552}}</string>
+			<string>{{498, 0}, {247, 114}}</string>
 			<key>textureRotated</key>
 			<false/>
 		</dict>
 		
-		<key>firsttreat4.png</key>
+		<key>arrow4.png</key>
 		<dict>
 			<key>aliases</key>
 			<array>
 			
 			</array>
 			<key>spriteColorRect</key>
-			<string>{{0, 0}, {766, 552}}</string>
+			<string>{{0, 0}, {247, 114}}</string>
 			<key>spriteOffset</key>
-			<string>{-17, -0}</string>
+			<string>{0, -0}</string>
 			<key>spriteSize</key>
-			<string>{766, 552}</string>
+			<string>{247, 114}</string>
 			<key>spriteSourceSize</key>
-			<string>{800, 552}</string>
+			<string>{247, 114}</string>
 			<key>spriteTrimmed</key>
 			<true/>
 			<key>textureRect</key>
-			<string>{{2304, 0}, {766, 552}}</string>
+			<string>{{747, 0}, {247, 114}}</string>
 			<key>textureRotated</key>
 			<false/>
 		</dict>
 		
-		<key>firsttreat5.png</key>
+		<key>arrow5.png</key>
 		<dict>
 			<key>aliases</key>
 			<array>
 			
 			</array>
 			<key>spriteColorRect</key>
-			<string>{{0, 0}, {766, 552}}</string>
+			<string>{{0, 0}, {247, 114}}</string>
 			<key>spriteOffset</key>
-			<string>{-17, -0}</string>
+			<string>{0, -0}</string>
 			<key>spriteSize</key>
-			<string>{766, 552}</string>
+			<string>{247, 114}</string>
 			<key>spriteSourceSize</key>
-			<string>{800, 552}</string>
+			<string>{247, 114}</string>
 			<key>spriteTrimmed</key>
 			<true/>
 			<key>textureRect</key>
-			<string>{{3072, 0}, {766, 552}}</string>
+			<string>{{996, 0}, {247, 114}}</string>
 			<key>textureRotated</key>
 			<false/>
 		</dict>
 		
-		<key>firsttreat6.png</key>
+		<key>arrow6.png</key>
 		<dict>
 			<key>aliases</key>
 			<array>
 			
 			</array>
 			<key>spriteColorRect</key>
-			<string>{{0, 0}, {766, 552}}</string>
+			<string>{{0, 0}, {247, 114}}</string>
 			<key>spriteOffset</key>
-			<string>{-17, -0}</string>
+			<string>{0, -0}</string>
 			<key>spriteSize</key>
-			<string>{766, 552}</string>
+			<string>{247, 114}</string>
 			<key>spriteSourceSize</key>
-			<string>{800, 552}</string>
+			<string>{247, 114}</string>
 			<key>spriteTrimmed</key>
 			<true/>
 			<key>textureRect</key>
-			<string>{{3840, 0}, {766, 552}}</string>
+			<string>{{1245, 0}, {247, 114}}</string>
 			<key>textureRotated</key>
 			<false/>
 		</dict>
 		
-		<key>firsttreat7.png</key>
+		<key>arrow7.png</key>
 		<dict>
 			<key>aliases</key>
 			<array>
 			
 			</array>
 			<key>spriteColorRect</key>
-			<string>{{0, 0}, {766, 552}}</string>
+			<string>{{0, 0}, {247, 114}}</string>
 			<key>spriteOffset</key>
-			<string>{-17, -0}</string>
+			<string>{0, -0}</string>
 			<key>spriteSize</key>
-			<string>{766, 552}</string>
+			<string>{247, 114}</string>
 			<key>spriteSourceSize</key>
-			<string>{800, 552}</string>
+			<string>{247, 114}</string>
 			<key>spriteTrimmed</key>
 			<true/>
 			<key>textureRect</key>
-			<string>{{4608, 0}, {766, 552}}</string>
+			<string>{{1494, 0}, {247, 114}}</string>
+			<key>textureRotated</key>
+			<false/>
+		</dict>
+		
+		<key>arrow8.png</key>
+		<dict>
+			<key>aliases</key>
+			<array>
+			
+			</array>
+			<key>spriteColorRect</key>
+			<string>{{0, 0}, {247, 114}}</string>
+			<key>spriteOffset</key>
+			<string>{0, -0}</string>
+			<key>spriteSize</key>
+			<string>{247, 114}</string>
+			<key>spriteSourceSize</key>
+			<string>{247, 114}</string>
+			<key>spriteTrimmed</key>
+			<true/>
+			<key>textureRect</key>
+			<string>{{1743, 0}, {247, 114}}</string>
 			<key>textureRotated</key>
 			<false/>
 		</dict>
@@ -167,7 +189,7 @@
 		<key>format</key>
 		<integer>3</integer>
 		<key>size</key>
-		<string>{8192, 1024}</string>
+		<string>{2048, 128}</string>
 		<key>name</key>
 		<string>Untitled</string>
 		<key>premultipliedAlpha</key>
